track-b-ec2-vanilla/03-cni-cilium/manifests/l7-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hello-l7
  namespace: demo
spec:
  endpointSelector:
    matchLabels:
      app: hello
  ingress:
    - fromEndpoints:
        - matchLabels:
            run: curl
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: "GET"
                path: "/"
